--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@
 .teal-font-light {
 	color: #C5F3FF;
 }
-.teal-font-medium-dark{
+.teal-font-medium{
 	color: #005D75;
 }
 .teal-font-dark {
@@ -123,7 +123,7 @@
 .purple-font-light {
 	color: #e1cede;
 }
-.purple-font-medium-dark{
+.purple-font-medium{
 	color: #3c0538;
 }
 .purple-font-dark {
