--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,8 +1,5 @@
- @use 'mixins.scss';
+@use 'mixins.scss' as *;
  
- 
- $font-stack-print: Lyon-Text, Georgia, ui-serif, serif;   
-    
     
 .light-gray {
 	color: #97a1aa;
@@ -12,7 +9,6 @@
 }
 
 
-    
 /* Inspired by: https://www.color-hex.com/color-palette/1007760 */
 /* https://coolors.co/ead0f1-e3b7f1-c88fda-a37ab8-825996 */
 /* Lilac color scheme, light to dark */
@@ -40,7 +36,7 @@ $wedding_font_light: #f9edfd;
 	@include createLinearGradient(45deg, $wedding_bck_color_5, #6e78ff);
 }
 .wedding-font-dark {
-	color: $wedding_font_dark;
+	color: $wedding_font_dark; 
 }
 .wedding-font-light {
 	color: $wedding_font_light;
@@ -65,7 +61,7 @@ $teal_font_light: #C5F3FF;
 $teal_font_medium: #005D75;
 $teal_font_dark: #004657;
 
-body{
+.teal-background-gradient{
 	@include createCornerGradient($teal_bck_color_6, $teal_bck_color_1);
 }
 
@@ -81,18 +77,18 @@ body{
 
 
 
-/* https://colorkit.co/palette/660e60-893f71-ac6f82-cfa093-f3d0a4/ */
-/* https://colorkit.co/color/660e60/ */
+/* https://coolors.co/dfb9d3-d29dc1-b8659e-893f71-622d51 */
 /* purple color scheme, light to dark */
 
-$purple_bck_color_1: #f3d0a4;
-$purple_bck_color_2: #cfa093;
-$purple_bck_color_3: #ac6f82;
-$purple_bck_color_4: #893f71;
-$purple_bck_color_5: #660e60;
-$purple_font_light: #e1cede;
-$purple_font_medium: #3c0538;
-$purple_font_dark: #230220;
+$purple_bck_color_1: #DFB9D3;
+$purple_bck_color_2: #DFB9D3;
+$purple_bck_color_3: #B8659E;
+$purple_bck_color_4: #893F71;
+$purple_bck_color_5: #622D51;
+
+$purple_font_light: #381A2E;
+$purple_font_medium: #70335D;
+$purple_font_dark: #381A2E;
 
 .purple-bck-color-1 {
 	background-color: $purple_bck_color_1;
@@ -118,21 +114,13 @@ $purple_font_dark: #230220;
 .purple-font-dark {
 	color: $purple_font_dark;
 }
-
-
-
-
-
-.taylorQuoteWidget {
-	@include createCornerGradient($teal_bck_color_6, $teal_bck_color_1);
-
-	padding: 5px 5px ;
-	text-align: center;
-	max-width: 95%;
-	margin: auto;
-	font-variant-caps: petite-caps;
-	width: 95%;
-	min-height: 100px;
-	background-repeat: no-repeat;
-	background-size: 20px 20px;
+.purple-background-gradient{
+	@include createCornerGradient($purple_bck_color_5, $purple_bck_color_1);
 }
+
+
+
+
+
+
+
