--- a/countdown_wedding/countdown_wedding.css
+++ b/countdown_wedding/countdown_wedding.css
@@ -9,22 +9,27 @@
 /* Inspired by: https://www.color-hex.com/color-palette/1007760 */
 /* https://coolors.co/ead0f1-e3b7f1-c88fda-a37ab8-825996 */
 /* Lilac color scheme, light to dark */
-.wedding-bck-gradient-1 {
+.wedding-bck-gradient-main {
+  background: #825996;
+  background: linear-gradient(45deg, #825996 40%, #ead0f1 100%);
+}
+
+.wedding-bck-gradient-1, .box_months, .box_weeks {
   background: #ead0f1;
   background: linear-gradient(45deg, #ead0f1 40%, #6e78ff 100%);
 }
 
-.wedding-bck-gradient-2 {
+.wedding-bck-gradient-2, .box_days {
   background: #e3b7f1;
   background: linear-gradient(45deg, #e3b7f1 40%, #6e78ff 100%);
 }
 
-.wedding-bck-gradient-3 {
+.wedding-bck-gradient-3, .box_hours {
   background: #c88fda;
   background: linear-gradient(45deg, #c88fda 40%, #6e78ff 100%);
 }
 
-.wedding-bck-gradient-4 {
+.wedding-bck-gradient-4, .box_minutes {
   background: #a37ab8;
   background: linear-gradient(45deg, #a37ab8 40%, #6e78ff 100%);
 }
@@ -34,38 +39,30 @@
   background: linear-gradient(45deg, #825996 40%, #6e78ff 100%);
 }
 
-.wedding-font-dark {
-  color: #501B5F;
-}
-
-.wedding-font-light {
-  color: #f9edfd;
-}
-
 .wedding-border {
   border: 2px solid #501B5F;
   border-radius: 5px;
 }
 
-/* https://coolors.co/palette/9bebff-7ce5ff-42d9ff-00bbe9-008caf */
+/* https://coolors.co/9ce4e8-6ad6dc-2fbfc6-28a2a8-1f7f84 */
 /* Teal color scheme, light to dark */
 .teal-background-gradient {
-  background: linear-gradient(to right, #005D75 4px, transparent 4px) 0 0, linear-gradient(to right, #005D75 4px, transparent 4px) 0 100%, linear-gradient(to left, #005D75 4px, transparent 4px) 100% 0, linear-gradient(to left, #005D75 4px, transparent 4px) 100% 100%, linear-gradient(to bottom, #005D75 4px, transparent 4px) 0 0, linear-gradient(to bottom, #005D75 4px, transparent 4px) 100% 0, linear-gradient(to top, #005D75 4px, transparent 4px) 0 100%, linear-gradient(to top, #005D75 4px, transparent 4px) 100% 100%;
+  background: linear-gradient(to right, #175F63 4px, transparent 4px) 0 0, linear-gradient(to right, #175F63 4px, transparent 4px) 0 100%, linear-gradient(to left, #175F63 4px, transparent 4px) 100% 0, linear-gradient(to left, #175F63 4px, transparent 4px) 100% 100%, linear-gradient(to bottom, #175F63 4px, transparent 4px) 0 0, linear-gradient(to bottom, #175F63 4px, transparent 4px) 100% 0, linear-gradient(to top, #175F63 4px, transparent 4px) 0 100%, linear-gradient(to top, #175F63 4px, transparent 4px) 100% 100%;
   background-repeat: no-repeat;
-  background-color: #9BEBFF;
+  background-color: #9CE4E8;
   background-size: 20px 20px;
 }
 
 .teal-font-light {
-  color: #C5F3FF;
+  color: #CEF2F3;
 }
 
 .teal-font-medium {
-  color: #005D75;
+  color: #238F95;
 }
 
 .teal-font-dark {
-  color: #004657;
+  color: #104042;
 }
 
 /* https://coolors.co/dfb9d3-d29dc1-b8659e-893f71-622d51 */
@@ -115,15 +112,6 @@ body {
   background-color: #fff;
 }
 
-.box {
-  display: inline-block;
-  display: inline-block;
-  padding: 10px;
-  border-radius: 5px;
-  min-width: 40px;
-  height: 60px;
-}
-
 h2 {
   display: inline-block;
   margin-right: 10px;
@@ -132,9 +120,19 @@ h2 {
 
 h3 {
   text-align: center;
+  color: #501B5F;
 }
 
 .small {
   font-size: 15px;
   font-weight: lighter;
+}
+
+.box, .box_minutes, .box_hours, .box_days, .box_weeks, .box_months {
+  display: inline-block;
+  padding: 10px;
+  border-radius: 5px;
+  min-width: 40px;
+  height: 60px;
+  color: #501B5F;
 }/*# sourceMappingURL=countdown_wedding.css.map */
