--- a/countdown_wedding/countdown_wedding.scss
+++ b/countdown_wedding/countdown_wedding.scss
@@ -5,14 +5,6 @@ body{
     font-family: 'Fjalla One', sans-serif;
     background-color: #fff;
 }
-.box{
-    display: inline-block;
-    display: inline-block;
-    padding: 10px;
-    border-radius: 5px;
-    min-width: 40px;
-    height: 60px;
-}
 
 h2{
     display: inline-block;
@@ -21,9 +13,39 @@ h2{
 }
 h3{
     text-align: center;
-    
+    color: $wedding-font-dark;
 }
 .small{
     font-size: 15px;
     font-weight: lighter;
 }
+
+.box{
+    display: inline-block;
+    padding: 10px;
+    border-radius: 5px;
+    min-width: 40px;
+    height: 60px;
+    color: $wedding_font_dark;
+}
+.box_months{
+    @extend .box;
+    @extend .wedding-bck-gradient-1;
+}
+.box_weeks{
+    @extend .box;
+    @extend .wedding-bck-gradient-1;
+}
+.box_days{
+    @extend .box;
+    @extend .wedding-bck-gradient-2;
+}
+.box_hours{
+    @extend .box;
+    @extend .wedding-bck-gradient-3;
+}
+.box_minutes{
+    @extend .box;
+    @extend .wedding-bck-gradient-4;
+}
+
